<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_estampado"
    tools:context=".controlers.Perfil">

    <TextView
        android:id="@+id/tvTituloPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="PERFIL"
        android:textColor="@color/md_white_1000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/et_Estado"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:background="@drawable/caja_purple"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etEstado"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_white_1000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/tvLabelApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvApellidos"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCorreo"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/tvLabelDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDescripcion"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/tvLabelEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEstado"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <TextView
        android:id="@+id/tv_Apellidos"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:background="@drawable/caja_purple"
        android:gravity="center"
        android:padding="5dp"
        android:text="apellidos"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/tv_Email"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:background="@drawable/caja_purple"
        android:gravity="center"
        android:padding="5dp"
        android:text="Email"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/tv_Nombre"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:background="@drawable/caja_purple"
        android:gravity="center"
        android:padding="5dp"
        android:text="nombre"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/tv_Descripcion"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:background="@drawable/caja_purple"
        android:gravity="center"
        android:hint="@string/etDescripcion"
        android:padding="5dp"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_white_1000"
        android:textSize="18dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="20dp"
        android:background="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/tvLabelNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNombre"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="127dp"
        android:layout_height="53dp"
        android:background="@drawable/boton_borde_purple"
        android:onClick="crearEstado"
        android:text="@string/btnGuardar"
        android:textColor="@color/md_amber_400"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

</androidx.constraintlayout.widget.ConstraintLayout>