<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_estampado"
    tools:context=".controlers.MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="266dp"
        android:layout_height="95dp"
        android:gravity="center"
        android:text="@string/tituloApp"
        android:textColor="@color/md_white_1000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:padding="10dp"
        android:drawableLeft="@drawable/baseline_account_circle_black_18dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/usuario"
        android:textSize="28dp"
        android:inputType="textPersonName"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        android:background="@drawable/cajas_texto_transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:drawableLeft="@drawable/baseline_lock_black_18dp_grande"
        android:ems="10"
        android:padding="10dp"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="28dp"
        android:inputType="textPassword"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        android:background="@drawable/cajas_texto_transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:background="@drawable/boton_con_marco"
        android:gravity="center"
        android:onClick="entrar"
        android:text="@string/btnEntrar"
        android:textStyle="bold"
        android:textColor="@color/md_amber_400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:background="@drawable/boton_con_marco"
        android:gravity="center"
        android:onClick="crearCuenta"
        android:text="@string/btnCrearCuenta"
        android:textStyle="bold"
        android:textColor="@color/md_amber_400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="20dp"
        android:background="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="154dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/logo_menos_resolucion" />

</androidx.constraintlayout.widget.ConstraintLayout>